--- a/base.html.erb
+++ b/base.html.erb
@@ -20,9 +20,8 @@
 <style type="text/css">
     <style>
 /* Style The Dropdown Button */
-
 .dropbtn {
-    background-color: #8a47bc !important;
+    background-color: #1b305b !important;
     box-shadow: none !important;
     color: white;
     padding: 16px;
@@ -30,13 +29,11 @@
     border: none;
     cursor: pointer;
 }
-
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: relative;
     display: inline-block;
 }
-
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
     display: none;
@@ -46,7 +43,6 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
-
 /* Links inside the dropdown */
 .dropdown-content a {
     color: black !important;
@@ -54,24 +50,37 @@
     text-decoration: none;
     display: block;
 }
-
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {background-color: #f1f1f1}
-
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
+}
+
+select:focus, textarea:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="url"]:focus, input[type="tel"]:focus, input[type="color"]:focus, input[type="search"]:focus, input[type="email"]:focus, input[type="text"]:focus, input[type="password"]:focus {
+	border-color: rgba(27, 48, 91, 1) !important;
+	box-shadow: inset 0 1px 2px rgba(0,0,0,0.075), 0 0 0 2px rgba(27, 48, 91, 0.4) !important;
+}
+
+#main-menu>ul>li>a.selected {
+	border-bottom: 3px solid #294172 !important;
+}
+
+#header {
+	background-color: #294172 !important;
+}
+
+#top-menu {
+	background-color: #1b305b !important;
 }
 </style>
 </style>
 </head>
 <body class="<%= body_css_classes %>">
-<%= call_hook :view_layouts_base_body_top %>
 <div id="wrapper">
 
 <div class="flyout-menu js-flyout-menu">
@@ -136,7 +145,7 @@
 
 <div id="top-menu" style="height: 48px !important; padding: 1px 20px !important">
     <div class="dropdown" style="float: left; margin-right: 10px; margin-top: 8px">
-      <button class="dropbtn" style="font-weight: bold; background-color: #392c5e; color: #deddef; border-color: #deddef; box-shadow: none; height: 30px !important">
+      <button class="dropbtn" style="font-weight: bold; background-color: #1b305b; color: #deddef; border-color: #deddef; box-shadow: none; height: 30px !important">
           <img src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiIHN0YW5kYWxvbmU9Im5vIj8+Cjxz
 dmcKICAgeG1sbnM6ZGM9Imh0dHA6Ly9wdXJsLm9yZy9kYy9lbGVtZW50cy8xLjEvIgogICB4bWxu
 czpjYz0iaHR0cDovL2NyZWF0aXZlY29tbW9ucy5vcmcvbnMjIgogICB4bWxuczpyZGY9Imh0dHA6
@@ -279,12 +288,10 @@ aXR5OjEiIC8+PC9zdmc+" style="height: 12px; margin-top: 6px" />
     <% if User.current.logged? || !Setting.login_required? %>
     <div id="quick-search">
         <%= form_tag({:controller => 'search', :action => 'index', :id => @project}, :method => :get ) do %>
-        <%= hidden_field_tag 'scope', default_search_project_scope, :id => nil %>
         <%= hidden_field_tag(controller.default_search_scope, 1, :id => nil) if controller.default_search_scope %>
         <label for='q'>
           <%= link_to l(:label_search), {:controller => 'search', :action => 'index', :id => @project}, :accesskey => accesskey(:search) %>:
         </label>
-        <%= text_field_tag 'q', @question, :size => 20, :class => 'small', :accesskey => accesskey(:quick_search) %>
         <% end %>
         <%= render_project_jump_box %>
     </div>
